<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailActivity"
    android:id="@+id/detailFruit">

    <ImageView
        android:id="@+id/detail_image_fruit"
        android:layout_width="450dp"
        android:layout_height="300dp"
        android:background="@color/material_dynamic_neutral90"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="320dp"
        android:layout_marginRight="20dp"
        tools:text="@string/fruites_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_detail_DescFruit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/tv_detail_name"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        tools:text="@string/description" />

    <TextView
        android:id="@+id/tv_detail_khasiat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/tv_detail_DescFruit"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        tools:text="@string/fruites_khasiat"/>

</RelativeLayout>